# leechcraft

./: .gitignore  Build-LeechCraft.ps1  README  README.md  Register-BuildFunctions.ps1  Register-CheckFunctions.ps1  Register-PathFunctions.ps1  build.cmd.sample  conanfile.txt  conaninfo.txt  config.example.ps1  test.cmd.sample
src/: CMakeLists.txt  CMakeWinVersions.cmake  client.cpp  client.hpp  connectionstatus.hpp  debugmessagehandler.cpp  flappacket.cpp  flappacket.hpp  pluginmanager.cpp  shortcutmanager.cpp  tlvdata.cpp  tlvdata.hpp  utils.cpp  utils.hpp
src/interfaces/: iactionsexporter.h  itexteditor.h
src/interfaces/media/: ieventsprovider.h  iradiostationprovider.h
src/plugins/aggregator/: aggregator.cpp
src/plugins/auscrie/: auscrie.cpp  shooterdialog.h
src/plugins/azoth/: chattab.cpp  core.cpp  filesenddialog.cpp
src/plugins/azoth/cmake/: FindQCA2.cmake
src/plugins/azoth/interfaces/azoth/: imetainfoentry.h
src/plugins/azoth/plugins/acetamide/: localtypes.h  serverresponsemanager.cpp
src/plugins/azoth/plugins/adiumstyles/: adiumstylesource.cpp
src/plugins/azoth/plugins/autopaste/: autopaste.cpp  pasteservicebase.h  pasteservicefactory.cpp
src/plugins/azoth/plugins/metacontacts/: metaentry.cpp
src/plugins/azoth/plugins/xoox/: CMakeLists.txt  msgarchivingmanager.cpp  msgarchivingmanager.h  regformhandlerwidget.h  vcarddialog.cpp
src/plugins/bittorrent/: CMakeLists.txt  speedselectoraction.cpp  tabwidget.cpp  torrentfilesmodel.cpp
src/plugins/deadlyrics/: concretesite.cpp
src/plugins/dolozhee/: bugreportpage.cpp  chooseuserpage.h  reporttypepage.h
src/plugins/hotstreams/: audioaddictstreamfetcher.h  streamlistfetcherbase.cpp
src/plugins/kbswitch/: keyboardlayoutswitcher.h
src/plugins/keyboardcraft/: keyboardlayoutswitcher.h
src/plugins/kinotify/: fswinwatcher_win.cpp  fswinwatcher_x11.cpp
src/plugins/lackman/: packageprocessor.cpp
src/plugins/laure/: chooseurldialog.cpp
src/plugins/lhtr/: richeditorwidget.cpp
src/plugins/liznoo/: CMakeLists.txt  batteryinfo.h  liznoo.cpp  platformlayer.h
src/plugins/liznoo/cmake/: FindQwt6.cmake
src/plugins/lmp/: CMakeLists.txt  albumartmanager.cpp  lmp.cpp  localcollection.cpp  localcollection.h  localfileresolver.cpp  player.cpp  player.h  playertab.cpp  playlistmanager.cpp  playlistwidget.cpp  releaseswidget.h  util.cpp
src/plugins/lmp/cmake/: FindTaglib.cmake
src/plugins/lmp/devsync/: syncmanager.cpp  transcodingparamswidget.cpp
src/plugins/lmp/interfaces/lmp/: icloudstorageplugin.h  isyncplugin.h
src/plugins/lmp/playlistparsers/: commonpl.cpp  pls.cpp  xspf.cpp
src/plugins/lmp/plugins/dumbsync/: dumbsync.cpp
src/plugins/lmp/plugins/mp3tunes/: accountsmanager.cpp  mp3tunes.cpp  playlistmanager.cpp  uploader.h
src/plugins/lmp/sync/: clouduploadmanager.cpp  syncmanager.cpp  transcodingparamswidget.cpp
src/plugins/monocle/: documenttab.cpp  documenttab.h  monocle.cpp
src/plugins/monocle/interfaces/monocle/: ilink.h
src/plugins/monocle/plugins/pdf/: document.h
src/plugins/netstoremanager/: filesmodel.cpp  filesview.cpp  managertab.cpp  netstoremanager.cpp
src/plugins/netstoremanager/plugins/googledrive/: account.cpp  drivemanager.cpp  drivemanager.h  uploadmanager.h
src/plugins/netstoremanager/plugins/yandexdisk/: common.cpp
src/plugins/newlife/importers/miranda/: mirandaimporter.cpp  mirandaimporter.h  mirandaimportpage.cpp  mirandaimportpage.h
src/plugins/newlife/importers/psiplus/: psiplusimportpage.cpp
src/plugins/newlife/importers/vacuum/: vacuumimportpage.cpp
src/plugins/otlozhu/: core.cpp  icalparser.cpp  itemsmergedialog.h  otlozhu.cpp  otlozhu.h  todoitem.h  todotab.cpp
src/plugins/pseudopodia/: .gitignore  README.md
src/plugins/pseudopodia/src/: client.cpp  connectionstatus.hpp  tlvdata.cpp
src/plugins/pseudopodia/src/test/: consoleclient.cpp  consoleclient.hpp  main.cpp  (+1 more)
src/plugins/tabsessmanager/: tabsessmanager.cpp
src/plugins/vrooby/: vrooby.cpp
src/plugins/xproxy/: xproxy.h
src/plugins/y7/: CMakeLists.txt  buttonmanager.cpp  buttonmanager.h  previewmanager.cpp  progressmanager.cpp  progressmanager.h  y7.cpp  y7.h
src/resources/: template-resource-app.rc  template-resource-dll.rc
src/test/: CMakeLists.txt  consoleclient.cpp  consoleclient.hpp  librarythread.hpp  main.cpp
src/util/: CMakeLists.txt  dblock.h  sysinfo.cpp
src/util/shortcuts/: shortcutmanager.cpp
src/xmlsettingsdialog/: CMakeLists.txt  filepicker.h
(+24 files in other folders)
